--- a/translations/de-DE.json
+++ b/translations/de-DE.json
@@ -1,3 +1,5 @@
 {
-    "Check": "Check"
+  "Checking...": "Untersuchung...",
+  "Check": "Prüfen",
+  "Insert to document": "In dokument einfügen"
 }
