--- a/translations/es-ES.json
+++ b/translations/es-ES.json
@@ -1,3 +1,5 @@
 {
-    "Check": "Comprobar"
+  "Checking...": "Examen...",
+  "Check": "Cheque",
+  "Insert to document": "Insertar en documento"
 }
