--- a/translations/fr-FR.json
+++ b/translations/fr-FR.json
@@ -1,3 +1,5 @@
 {
-    "Check": "Vérifier"
+  "Checking...": "Examen...",
+  "Check": "Vérifier",
+  "Insert to document": "Insérer dans le document"
 }
