--- a/translations/ru-RU.json
+++ b/translations/ru-RU.json
@@ -1,3 +1,5 @@
 {
-    "Check": "Проверить"
+  "Checking...": "Проверка...",
+  "Check": "Проверить",
+  "Insert to document": "Вставить в документ"
 }
