--- a/translations/de-DE.json
+++ b/translations/de-DE.json
@@ -1,5 +1,5 @@
 {
-  "Checking...": "Untersuchung...",
+  "Checking...": "Wird überprüft...",
   "Check": "Prüfen",
-  "Insert to document": "In dokument einfügen"
+  "Insert to document": "In Dokument einfügen"
 }
