--- a/translations/de-DE.json
+++ b/translations/de-DE.json
@@ -1,5 +1,6 @@
 {
   "Checking...": "Wird überprüft...",
   "Check": "Prüfen",
-  "Insert to document": "In Dokument einfügen"
+  "Insert to document": "In Dokument einfügen",
+  "Dismiss": "Überspringen"
 }
