--- a/translations/es-ES.json
+++ b/translations/es-ES.json
@@ -1,5 +1,6 @@
 {
   "Checking...": "Examen...",
   "Check": "Cheque",
-  "Insert to document": "Insertar en documento"
+  "Insert to document": "Insertar en documento",
+  "Dismiss": "Saltar"
 }
