--- a/translations/fr-FR.json
+++ b/translations/fr-FR.json
@@ -1,5 +1,6 @@
 {
   "Checking...": "Examen...",
   "Check": "Vérifier",
-  "Insert to document": "Insérer dans le document"
+  "Insert to document": "Insérer dans le document",
+  "Dismiss": "Skip"
 }
