--- a/translations/nl-NL.json
+++ b/translations/nl-NL.json
@@ -1,5 +1,6 @@
 {
   "Checking...": "Examen...",
   "Check": "Rekening",
-  "Insert to document": "Invoegen in document"
+  "Insert to document": "Invoegen in document",
+  "Dismiss": "Skip"
 }
