--- a/translations/ru-RU.json
+++ b/translations/ru-RU.json
@@ -1,5 +1,6 @@
 {
   "Checking...": "Проверка...",
   "Check": "Проверить",
-  "Insert to document": "Вставить в документ"
+  "Insert to document": "Вставить в документ",
+  "Dismiss": "Пропустить"
 }
