--- a/translations/zh-ZH.json
+++ b/translations/zh-ZH.json
@@ -1,5 +1,6 @@
 {
   "Checking...": "考試...",
   "Check": "查看",
-  "Insert to document": "插入文檔"
+  "Insert to document": "插入文檔",
+  "Dismiss": "跳过"
 }
