--- a/translations/cs-CS.json
+++ b/translations/cs-CS.json
@@ -1,5 +1,6 @@
 {
   "Checking...": "Zkouška...",
   "Check": "Šek",
-  "Insert to document": "Vložte do dokumentu"
+  "Insert to document": "Vložte do dokumentu",
+  "Dismiss": "Přeskočit"
 }
