--- a/translations/ja-JA.json
+++ b/translations/ja-JA.json
@@ -1,5 +1,6 @@
 ﻿{
   "Checking...": "審査...",
   "Check": "小切手",
-  "Insert to document": "ドキュメントに挿入"
+  "Insert to document": "ドキュメントに挿入",
+  "Dismiss": "スキップ"
 }
