Added translations. Fixed duplicate languages.

--- a/translations/cs-CS.json
+++ b/translations/cs-CS.json
@@ -2,5 +2,7 @@
   "Checking...": "Zkouška...",
   "Check": "Šek",
   "Insert to document": "Vložte do dokumentu",
-  "Dismiss": "Přeskočit"
+  "Dismiss": "Přeskočit",
+  "Clear": "Přehledně",
+  "Language": "Jazyk"
 }
