--- a/translations/de-DE.json
+++ b/translations/de-DE.json
@@ -2,5 +2,7 @@
   "Checking...": "Wird überprüft...",
   "Check": "Prüfen",
   "Insert to document": "In Dokument einfügen",
-  "Dismiss": "Überspringen"
+  "Dismiss": "Überspringen",
+  "Clear": "Klar",
+  "Language": "Sprache"
 }
