--- a/translations/es-ES.json
+++ b/translations/es-ES.json
@@ -2,5 +2,7 @@
   "Checking...": "Examen...",
   "Check": "Cheque",
   "Insert to document": "Insertar en documento",
-  "Dismiss": "Saltar"
+  "Dismiss": "Saltar",
+  "Clear": "Borrar",
+  "Language": "Idioma"
 }
