--- a/translations/fr-FR.json
+++ b/translations/fr-FR.json
@@ -2,5 +2,7 @@
   "Checking...": "Examen...",
   "Check": "Vérifier",
   "Insert to document": "Insérer dans le document",
-  "Dismiss": "Skip"
+  "Dismiss": "Skip",
+  "Clear": "Clear",
+  "Language": "Langue"
 }
