--- a/translations/it-IT.json
+++ b/translations/it-IT.json
@@ -2,5 +2,7 @@
   "Checking...": "Visita medica...",
   "Check": "Dai un'occhiata",
   "Insert to document": "Inserisci nel documento",
-  "Dismiss": "Salta"
+  "Dismiss": "Salta",
+  "Clear": "Chiaro",
+  "Language": "Lingua"
 }
