--- a/translations/ja-JA.json
+++ b/translations/ja-JA.json
@@ -2,5 +2,7 @@
   "Checking...": "審査...",
   "Check": "小切手",
   "Insert to document": "ドキュメントに挿入",
-  "Dismiss": "スキップ"
+  "Dismiss": "スキップ",
+  "Clear": "鮮明",
+  "Language": "言語"
 }
