--- a/translations/pt-PT.json
+++ b/translations/pt-PT.json
@@ -2,5 +2,7 @@
   "Checking...": "Verificação...",
   "Check": "Verificar",
   "Insert to document": "Inserir em um documento",
-  "Dismiss": "Saltar"
+  "Dismiss": "Saltar",
+  "Clear": "Limpar",
+  "Language": "Idioma"
 }
