--- a/translations/ru-RU.json
+++ b/translations/ru-RU.json
@@ -2,5 +2,7 @@
   "Checking...": "Проверка...",
   "Check": "Проверить",
   "Insert to document": "Вставить в документ",
-  "Dismiss": "Пропустить"
+  "Dismiss": "Пропустить",
+  "Clear": "Очистить",
+  "Language": "Язык"
 }
