--- a/translations/zh-ZH.json
+++ b/translations/zh-ZH.json
@@ -2,5 +2,7 @@
   "Checking...": "考試...",
   "Check": "查看",
   "Insert to document": "插入文檔",
-  "Dismiss": "跳过"
+  "Dismiss": "跳过",
+  "Clear": "清楚",
+  "Language": "语言"
 }
