--- a/translations/nl-NL.json
+++ b/translations/nl-NL.json
@@ -2,5 +2,7 @@
   "Checking...": "Examen...",
   "Check": "Rekening",
   "Insert to document": "Invoegen in document",
-  "Dismiss": "Skip"
+  "Dismiss": "Skip",
+  "Clear": "Duidelijk",
+  "Language": "Taal"
 }
